# iot-reference-nxp-rt1060

./: .gitignore  .gitmodules  CHANGELOG.md  EVK-MIMXRT1060_manifest_v3_8.xml  GSG.md  README.md  SpellingErrorList.txt  cspell.config.yaml  lexicon.txt  manifest.yml
.github/: .cSpellWords.txt
Middleware/NXP/hostLib/: .mbedignore  Android.mk  CMakeLists.txt
Middleware/NXP/hostLib/a71ch/: CMakeLists.txt
Middleware/NXP/hostLib/a71ch/app/: CMakeLists.txt  configCli.c  configCli.h  configCliApdu.c  configCliConnect.c  configCliDebug.c  configCliEcrt.c  configCliErase.c  configCliGen.c  configCliGet.c  configCliInfo.c  configCliInteractive.c  configCliInteractive_ln.c  configCliLock.c  configCliObj.c  configCliRcrt.c  configCliRefpem.c  configCliScp.c  configCliScript.c  configCliSet.c  configCliTransport.c  configCliWcrt.c  configCmd.h  configCmdApdu.c  configCmdConnect.c  configCmdDebug.c  configCmdEcrt.c  configCmdErase.c  configCmdGen.c  configCmdGet.c  configCmdInfo.c  configCmdLock.c  configCmdObj.c  configCmdRcrt.c  configCmdRefpem.c  configCmdScp.c  configCmdSet.c  configCmdTransport.c  configCmdWcrt.c  configState.c  (+2 more)
Middleware/NXP/hostLib/a71ch/ex/: CMakeLists.txt  a71ch_ex.h  ex_aes.c  ex_boot.c  ex_config.c  ex_debug.c  ex_ecc_nohc.c  ex_gpstorage.c  ex_misc.c  ex_psk.c  ex_scp.c  ex_sst.c  ex_sst_kp.c  ex_walkthrough.c  mainA71CH.c  readme.txt
Middleware/NXP/hostLib/a71ch/ex_hlse/: CMakeLists.txt  a71ch_ex_hlse.h  ex_hlse_aes.c  ex_hlse_boot.c  ex_hlse_cert.c  ex_hlse_config.c  ex_hlse_debug.c  ex_hlse_ecc_nohc.c  ex_hlse_gpstorage.c  ex_hlse_misc.c  ex_hlse_psk.c  ex_hlse_scp.c  ex_hlse_sst.c  ex_hlse_sst_kp.c  ex_hlse_walkthrough.c  mainA71CH_hlse.c
Middleware/NXP/hostLib/a71ch/src/: a71ch_crypto_derive.c  a71ch_crypto_ecc.c  a71ch_module.c  a71ch_sst.c
Middleware/NXP/hostLib/accessManager/: CMakeLists.txt
Middleware/NXP/hostLib/accessManager/doc/: accessManager.rst  block_diagram.vsdx  scp03KeyFile.txt
Middleware/NXP/hostLib/accessManager/inc/: accessManager.h  accessManager_com.h
Middleware/NXP/hostLib/accessManager/src/: accessManager.c  accessManager_com.c  accessManager_rjct.c  accessManager_utils.c
Middleware/NXP/hostLib/api/: CMakeLists.txt
Middleware/NXP/hostLib/api/src/: A71HLSEWrapper.c  ID2HLSEWrapper.c  ax_scp.c  ax_util.c
Middleware/NXP/hostLib/ccid/ksdk/: CMakeLists.txt  fsl_smartcard_s05x.h  se05x_ccid.c
Middleware/NXP/hostLib/embSeEngine/: CMakeLists.txt
Middleware/NXP/hostLib/embSeEngine/inc/: ax_cryptoIpc.h  ax_embSeEngine.h  ax_embSeEngine_Internal.h
Middleware/NXP/hostLib/embSeEngine/scripts/: legacy_openssl_EccSign.py  legacy_openssl_Ecdh.py  legacy_openssl_provision.py  legacy_openssl_rnd.py  legacy_openssl_util.py  readme.md
Middleware/NXP/hostLib/embSeEngine/src/: ax_a71chEngine.c  ax_cryptoIpc.c
Middleware/NXP/hostLib/inc/: PlugAndTrust_HostLib_Ver.h  PlugAndTrust_Pkg_Ver.h
Middleware/NXP/hostLib/libCommon/: .mbedignore  CMakeLists.txt  libCommonAkmLists.mk
Middleware/NXP/hostLib/libCommon/hostCrypto/: HostCryptoAPI.h  HostCryptoAPIOpenSSL.c  HostCryptoAPIStubs.c  HostCryptoAPImbedtls.c  axHostCrypto.h  axHostCryptoOpenSSL.c  axHostCryptoStubs.c  axHostCryptombedtls.c  hcAsn.h
Middleware/NXP/hostLib/libCommon/infra/: .mbedignore  a71_debug.c  a71_debug.h  app_boot_nfc.c  cm_commands.c  sm_app_boot.c  sm_connect.c  sm_demo_utils.c  sm_demo_utils.h
Middleware/NXP/hostLib/libCommon/log/: CMakeLists.txt  nxLog_Android.c  nxLog_DefaultConfig.h  nxLog_Gen.bat  nxLog_Gen.py  nxLog_README.txt
Middleware/NXP/hostLib/libCommon/smCom/: .mbedignore  sci2c.c  sci2c.h  sci2c_cfg.h  smCom.c  smCom.h  smComJRCP.c  smComNxpNfcRdLib.c  smComNxpNfcRdLib.h  smComPCSC.c  smComPCSC.h  smComPN7150.c  smComPN7150.h  smComSCI2C.h  smComSerial.h  smComSerial_Darwin.c  smComSerial_PCLinux.c  smComSerial_win32.c  smComSocket.h  smComSocket_fd.c  smComSocket_linux.c  smComSocket_win32.c  smComThread.c  smComThread.h  smUart.h
Middleware/NXP/hostLib/mbedtls/inc/: a71ch_mbedtls_frdm_config.h  a71ch_mbedtls_frdmk64f_config.h  a71ch_mbedtls_frdmk82f_config.h  a71ch_mbedtls_frdmkw41z_config.h  a71ch_mbedtls_lpcxpresso54018_config.h  a71ch_mbedtls_pi_config.h  a71ch_mbedtls_x86_config.h  ax_mbedtls.h  ecp_alt.h
Middleware/NXP/hostLib/mbedtls/src/: ax_mbedtls.c  ecdh_alt.c  ecdh_alt_ax.c  ecp_alt_ax.c
Middleware/NXP/hostLib/platform/: .mbedignore
Middleware/NXP/hostLib/platform/android/: spi_a7.c
Middleware/NXP/hostLib/platform/imx/: se05x_reset.c
Middleware/NXP/hostLib/platform/inc/: se_reset_config.h
Middleware/NXP/hostLib/platform/ksdk/: ax_reset.c  i2c_frdm.c  i2c_imxrt10xx.c  i2c_lpc55sxx.c  i2c_mkshield.c  i2c_rhodesv4.c  se_pit_config.c  timer_kinetis_bm.c  timer_kinetis_freertos.c
Middleware/NXP/hostLib/platform/linux/: i2c_a7.c
Middleware/NXP/hostLib/rjct/: CMakeLists.txt
Middleware/NXP/hostLib/rjct/inc/: rjct.h
Middleware/NXP/hostLib/se05x/: CMakeLists.txt  se05xAkmLists.mk
Middleware/NXP/hostLib/se05x_03_xx_xx/: README.txt  se05x_perso_api.c  se05x_perso_api.h  se05x_perso_api.py  se05x_perso_api_int.h  se05x_perso_cnst.h
Middleware/NXP/hostLib/tstUtil/: a7xUtilsAkmLists.mk  axCliUtil.c  axCliUtil.h  axEccRefPem.c  axEccRefPem.h  hkdf.c  hkdf_mbedtls.c  hkdf_mbedtls.h  probeAxUtil.c  probeAxUtil.h  tstHostCrypto.c  tstHostCrypto_mbedtls.c  tst_a71ch_util.c  tst_a71ch_util.h  tst_hlse_a71ch_util.c  tst_hlse_a71ch_util.h  tst_measure_time.h  tst_sm_time.c  tst_sm_time.h  tst_sm_time_kinetis.c  tst_sm_util.c  tst_sm_util.h
Middleware/NXP/sss/: .mbedignore  CMakeLists.txt  ChangeLogKSDK.txt  README.md  sssAkmLists.mk  version_info.txt
Middleware/NXP/sss/doc/: apis-sss_key-format.rst  container-session-ks-ko.uml  key_config.txt  sss_heap_management.rst
Middleware/NXP/sss/ex/: .mbedignore  CMakeLists.txt
Middleware/NXP/sss/inc/: fsl_sss_base_apis.hpp  fsl_sss_ftr.h.in  fsl_sss_ftr_default.h  fsl_sss_mbedtls_apis.hpp  fsl_sss_openssl_apis.hpp  fsl_sss_se05x_apis.hpp  fsl_sss_se05x_types.h  fsl_sss_sscp_apis.hpp
Middleware/NXP/sss/port/: .mbedignore
Middleware/NXP/sss/src/: fsl_sss_util_asn1_der.c
(+473 files in other folders)
